--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crud-app-vue-js",
+  "name": "task-management-application",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.2.8"
+    "sass": "^1.75.0",
+    "vite": "^5.1.6"
   }
 }
